[package]
name = "vrc-canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.21.3"
egui_logger = "0.3.0"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
rosc = "0.10.1"
rust-i18n = "1.2.0"
sys-locale = "0.3.0"
tokio = { version = "1.28.1", features = ["time", "full"] }
